--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-appky plugin: 'idea'
+apply plugin: 'idea'
 apply plugin: 'spring-boot' 
 
 jar {
@@ -60,7 +60,9 @@ dependencies {
 	compile group: 'info.cukes', name: 'cucumber-spring', version: '1.2.4'
 	compile group: 'info.cukes', name: 'cucumber-junit', version: '1.2.4'
 	runtime('org.postgresql:postgresql')
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
 }
 
 
