--- a/build.gradle
+++ b/build.gradle
@@ -52,11 +52,12 @@ task itest(type: Test) {
     testClassesDir = sourceSets.itest.output.classesDir
     classpath = sourceSets.itest.runtimeClasspath
 
-    // This is not needed, but I like to see which tests have run
     testLogging {
         events "passed", "skipped", "failed"
     }
 }
+
+test.finalizedBy(itest)
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-aop')
