--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     compile group: 'info.cukes', name: 'cucumber-spring', version: '1.2.4'
     compile group: 'info.cukes', name: 'cucumber-junit', version: '1.2.4'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
     runtime('org.postgresql:postgresql')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
